--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,14 @@
-﻿<!DOCTYPE html>
+﻿@using OnlineShop.Services;
+
+@inject LayoutService service
+@{
+    Dictionary<string, string> settings = await service.GetSettingsAsync();
+   
+    decimal total = 0;
+}
+
+
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -97,7 +107,7 @@
             </div>
             <div class="col-lg-4 col-6 text-right">
                 <p class="m-0">Customer Service</p>
-                <h5 class="m-0">+012 345 6789</h5>
+                <h5 class="m-0">@settings["Phone"]</h5>
             </div>
         </div>
     </div>
